# FED

./: README.md  main.py  pyproject.toml  stack_list.py  test.py
components/: cleanser.py  cleanserImpl.py  parser.py  parserImpl.py  savers.py  wantedcleanser.py  wantedparser.py
saver/: companysaver.py  jobsaver.py  saver.py
sql_app/: database.py
sql_app/Company/: models.py  router.py  schema.py
sql_app/Employment/: models.py  router.py  schema.py
sql_app/Stack/: models.py  router.py  schema.py
sql_app/Team/: models.py  router.py  schema.py
