[tool.poetry]
name = "fed"
version = "0.1.0"
description = "For Every Developers"
authors = ["yoonki <yoonkeee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.87.0"
selenium = "^4.6.1"
requests = "^2.28.1"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
